changed code to fix overflow x and right margin in small query size

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+body {
+    overflow-x: hidden;
+}
 .logo {
     background: rgb(245, 245, 245);
     font-size: 30px;
